--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
                 position="0 0 0"
                 rotation="0 0 0"
                 scale="1 1 1"
-                gltf-model="source/Venom.glb"
+                gltf-model="/shiba.glb"
                 animation-handler>
             </a-entity>
         </a-marker>
